<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradientbluetogreen"
        android:orientation="vertical"
        tools:context=".HowToPlay">

    <Button
        android:id="@+id/back_btn_how"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/back_txt"
        android:background="@drawable/custom_btn_chosen"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:textSize="15sp" />

    <VideoView
        android:layout_marginTop="25dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:id="@+id/explanVideo" />

    <TextView
        android:id="@+id/explanation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/explanation_title"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"

        android:textSize="23sp" />

    <TextView
        android:id="@+id/explanation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/explanation1_txt"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/explanation2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/explanation2"
        android:layout_marginStart="10dp"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/explanation3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/explanation3"
        android:layout_marginStart="10dp"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/explanation4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/explanation4"
        android:layout_marginStart="10dp"
        android:textSize="18dp" />

    </LinearLayout>
